Spinner Animation Flickering Resolved

--- a/src/app/modules/spinner/spinner.component.sass
+++ b/src/app/modules/spinner/spinner.component.sass
@@ -10,20 +10,20 @@
   -webkit-animation: spinner .6s linear infinite
 
 .top-left
-  top: 10px
-  left: 10px
+  top: 20px
+  left: 20px
 
 .top-right
-  top: 10px
-  right: 10px
+  top: 20px
+  right: 20px
 
 .bottom-left
-  bottom: 10px
-  left: 10px
+  bottom: 20px
+  left: 20px
 
 .bottom-right
-  bottom: 10px
-  right: 10px
+  bottom: 20px
+  right: 20px
 
 .center
   top: 0
